--- a/index.html
+++ b/index.html
@@ -5,8 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estyle.css">
 </head>
 <body>
- <header></header>
+ <header>
+     <div id="menu">
+         <ul>
+             <li><a href="" >produtos</a></li>
+             <li><a href="">inicio</a></li>
+             <li><a href="">sobre</a></li>
+             <li id="last"><a href="">login</a></li>
+         </ul>
+     </div>
+ </header>
+  <div id="container" >  
+       <div class="slides">
+           <input type="radio" name="radio" id="radio1" checked>
+           <input type="radio" name="radio" id="radio2">
+           <input type="radio" name="radio" id="radio3">
+           <input type="radio" name="radio" id="radio4">
+           <div class="slide1 s1">
+                <img src="imagens/promo/D_NQ_NP_993843-MLB43315923218_082020-O.jpg" alt="shapes de skate">
+           </div>
+           <div class="slide2">
+               <img src="imagens/promo/dimitri-jourdan-devant-une-partie-de-sa-collection-de-skateboards-a-grigny-pres-de-lyon-le-17-septembre-2021_6323548.jpg" alt="shapes de skate com homem">
+           </div>
+           <div class="slide3">
+               <img src="imagens/promo/rxq7rhw7jqoo8wock0.png" alt="alemet logo">
+           </div>
+           <div class="slide4">
+               <img src="imagens/promo/Summer-saleLivestock-Gastown.jpg" alt="30 a 50 porcento off">
+           </div>
+       </div>
+       <div class="navigation">
+           <label class="bar" for="radio1"></label>
+           <label class="bar" for="radio2"></label>
+           <label class="bar" for="radio3"></label>
+           <label class="bar" for="radio4"></label>
+       </div>
+   </div>
 </body>
 </html>
